--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,7 +21,7 @@ android {
         versionCode 1
         versionName "1.0"
 
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "com.hsnbyhn.pokeinfo.CustomTestRunner"
     }
 
     compileOptions {
@@ -46,9 +46,6 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.3.1'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.0'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
     // architecture components
     implementation "androidx.fragment:fragment-ktx:$versions.fragmentVersion"
@@ -97,6 +94,15 @@ dependencies {
     implementation "com.github.bumptech.glide:glide:$glide_version"
     implementation "com.github.florent37:glidepalette:$glide_palette_version"
     kapt "com.github.bumptech.glide:compiler:$glide_version"
+
+    // test
+    def truth_version = "1.0.1"
+    def fragment_version = "1.2.5"
+    testImplementation 'junit:junit:4.12'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    androidTestImplementation "com.google.truth:truth:$truth_version"
+    debugImplementation "androidx.fragment:fragment-testing:$fragment_version"
 
 
 }
