--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,6 +13,7 @@ android {
 
     compileSdkVersion 29
     buildToolsVersion "29.0.3"
+    ndkVersion "21.3.6528147"
 
     defaultConfig {
         applicationId "com.hsnbyhn.pokeinfo"
@@ -75,10 +76,10 @@ dependencies {
 
 
     //Room
-    def room_version = "2.2.5"
-    implementation "androidx.room:room-runtime:$room_version"
-    implementation "androidx.room:room-ktx:$room_version"
-    kapt "androidx.room:room-compiler:$room_version"
+    //def room_version = "2.2.5"
+    //implementation "androidx.room:room-runtime:$room_version"
+    //implementation "androidx.room:room-ktx:$room_version"
+    //kapt "androidx.room:room-compiler:$room_version"
 
     //Dagger
     def dagger_hilt_version =  "1.0.0-alpha02"
