--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,7 +19,7 @@ android {
         applicationId "com.hsnbyhn.pokeinfo"
         minSdkVersion 21
         targetSdkVersion 29
-        versionCode 2
+        versionCode 3
         versionName "1.0"
 
         testInstrumentationRunner "com.hsnbyhn.pokeinfo.CustomTestRunner"
@@ -76,10 +76,10 @@ dependencies {
 
 
     //Room
-    //def room_version = "2.2.5"
-    //implementation "androidx.room:room-runtime:$room_version"
-    //implementation "androidx.room:room-ktx:$room_version"
-    //kapt "androidx.room:room-compiler:$room_version"
+    def room_version = "2.2.5"
+    implementation "androidx.room:room-runtime:$room_version"
+    implementation "androidx.room:room-ktx:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
 
     //Dagger
     def dagger_hilt_version =  "1.0.0-alpha02"
